# SecondTry

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  build.sh
cmake/: DebugVariables.cmake  GoogleTest.cmake  brotli.cmake  bzip2.cmake  fmt.cmake  freetype2.cmake  glfw.cmake  googletest.cmake  nanogui.cmake  png.cmake  sqlite3.cmake  zlib.cmake
src/: CMakeLists.txt
src/3rdPartyTest/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/include/: Core.h  Log.h
src/Core/include/internal/: Matrix.h  PODPtrStore.h  RotationMatrix.h  SmartPtrStore.h  TempMemPool.h
src/Core/src/: Core.cpp  Log.cpp
src/CoreTest/: CMakeLists.txt  CoreTest.cpp  LogTest.cpp  PODPtrStoreTest.cpp  QuaternionTest.cpp  SmartPtrStoreTest.cpp  TempMemPoolTest.cpp  VectorTest.cpp
src/Geometry/: CMakeLists.txt
src/Geometry/include/: Geometry.h
src/Geometry/include/internal/: Edge.h  Face.h  Node.h  Operations.h  PODPtrStore.h  Polygon.h  Shape.h  TriangulatedPolygon2D.h  Utilities.h
src/Geometry/include/internal/Operations/: Boolean.h  SweepEvent.h  SweepLine.h  SweepNode.h  Sweeper.h  Vector2dCompare.h
src/Geometry/src/: Constants.cpp  Edge.cpp  Face.cpp  Geometry.cpp  Polygon.cpp  Shape.cpp  TriangulatedPolygon2D.cpp  Utilities.cpp
src/Geometry/src/Operations/: Operations2D.cpp  Operations3D.cpp  SweepLine.cpp  Sweeper.cpp
src/Geometry/src/Shape/: Construct.cpp  Shape.cpp
src/GeometryTest/: CMakeLists.txt  GeometryTest.cpp  OperationsTest.cpp  PODPtrStoreTest.cpp  PolygonTest.cpp  ShapeTest.cpp  SweepLineTest.cpp  SweeperTest.cpp  Vector2dCompareTest.cpp
src/GoogleTest/: CMakeLists.txt
src/GoogleTest/src/: ConsoleOutput.cpp
src/GoogleTestTest/: CMakeLists.txt
src/MathTest/: CMakeLists.txt
src/MathTest/src/: Matrix.cpp  Matrix.h  MatrixTest.cpp
src/OpenGL/: CMakeLists.txt
src/OpenGL/include/: OpenGL.h
src/OpenGL/include/internal/: Font.h  GLShape.h  Mat4.h  Menu.h  OSSpecific.h  RGBAColor.h  RGBColor.h  Shader.h  State.h  Window.h
src/OpenGL/include/internal/Shaders/: 2d.h  3d.h  3dphong.h  text.h
src/OpenGL/src/: Font.cpp  GLShape.cpp  Mat4.cpp  OSSpecific-X11.cpp  OSSpecific-win32.cpp  OpenGL.cpp  Shader.cpp  Window.cpp
src/OpenGL/src/Shaders/: 2d.cpp  3d.cpp  3dphong.cpp  text.cpp
src/OpenGLPlayground/: CMakeLists.txt
src/OpenGLPlayground/src/: Main.cpp
src/OpenGLTest/: CMakeLists.txt
src/OpenGLTest/src/: Main.cpp  Menu.cpp
src/PNGWrapper/: CMakeLists.txt
src/PNGWrapper/include/: PNGWrapper.h
src/PNGWrapper/src/: PNGWrapper.cpp
src/PNGWrapperTest/: CMakeLists.txt
src/PNGWrapperTest/src/: SmokeTest.cpp
src/PlanetBuilders/: CMakeLists.txt
src/PlanetBuilders/src/: Main.cpp  UI.cpp  UI.h  UICallbacks.cpp
src/PlanetBuildersTest/: CMakeLists.txt
src/PlanetBuildersTest/src/: SmokeTest.cpp
src/SQLiteDB/: CMakeLists.txt
src/SQLiteDB/include/: SQLiteDB.h
src/SQLiteDB/include/internal/: DB.h
src/SQLiteDB/src/: SQLiteDB.cpp  SQLiteQuery.cpp  SQLiteStatement.cpp
src/SQLiteDBTest/: CMakeLists.txt  SQLiteTest.cpp
src/ZLibWrapper/: CMakeLists.txt
src/ZLibWrapper/include/: ZLibWrapper.h
src/ZLibWrapper/src/: ZLibWrapper.cpp
src/ZLibWrapperTest/: CMakeLists.txt
src/ZLibWrapperTest/src/: SmokeTest.cpp
