# Include sub-projects.

add_subdirectory ("3rdParty")
add_subdirectory ("Core")
add_subdirectory ("CoreTest")
add_subdirectory ("SQLiteDB")
add_subdirectory ("SQLiteDBTest")
add_subdirectory ("Geometry")
add_subdirectory ("GeometryTest")
add_subdirectory ("OpenGL")
add_subdirectory ("OpenGLTest")
add_subdirectory ("OpenGLPlayground")
add_subdirectory ("GoogleTest")
add_subdirectory ("GoogleTestTest")
add_subdirectory ("ZLibWrapper")
add_subdirectory ("ZLibWrapperTest")
add_subdirectory ("PNGWrapper")
add_subdirectory ("PNGWrapperTest")
#add_subdirectory ("PlanetBuilders")
#add_subdirectory ("PlanetBuildersTest")
add_subdirectory ("MathTest")

